implementation/deploy/istio/generated/finance/peerauthentication-paymentToLedger-mtls.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: paymentToLedger-mtls
  namespace: finance
  labels:
    app.kubernetes.io/managed-by: quantumtrustkg
  annotations:
    quantumtrustkg.io/edge-id: paymentToLedger
    quantumtrustkg.io/profile: QuantumSafeProfile
    quantumtrustkg.io/security-level: quantum_safe
spec:
  selector:
    matchLabels:
      app: Ledger
  mtls:
    mode: STRICT
